# duckdbgpumetaldbram

./: .gitignore  BENCHMARK.md  CLAUDE.md  CMakeLists.txt  GOAL.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  ci.yml.disabled
.sync/: README.md  duckdbgpumetaldb.md  duckdbgpumetaldbram.md  feat-ci-and-cpu-parallel.md  feat-core-hybrid-planner.md  feat-cuda-hashjoin.md  feat-ext-duckdb-stub.md  feat-ext-macos-validate.md  feat-metal-hashjoin-scaffold.md  feat-metal-multiagg.md  fix-window-bugs-followup.md  fix-window-partition-bug.md  test-sql-suite-expand.md
benchmark/: CMakeLists.txt  bench_main.cpp  csv2bin_main.cpp  gen_main.cpp  groupby_bench_main.cpp  hashjoin_bench_main.cpp  sql_demo_main.cpp  window_bench_main.cpp
cmake/: embed_metal_sources.cmake
docs/: ARCHITECTURE.md  BENCHMARK_PLAN.md  COMMUNITY_EXTENSION_DESCRIPTION.yml  DATASETS.md  DEVELOPMENT.md  MACOS_EXTENSION_BUILD.md  RELEASE_READINESS.md  WINDOW_FUNCTIONS_DESIGN.md
scripts/: append_extension_footer.py  build.sh  env.sh  gen_tpch.sh  get_duckdb_libs.sh  install_cuda_ubuntu.sh  local_check.sh  new_worktree.sh  run_sql_tests.sh  sync.sh
src/: CMakeLists.txt
src/backends/: backend_factory.cpp  backend_internal.hpp  hybrid_planner.cpp
src/backends/cpu/: cpu_aggregator.cpp  cpu_groupby.cpp  cpu_hashjoin.cpp  cpu_window.cpp
src/backends/cuda/: cuda_aggregator.cpp  cuda_groupby.cpp  cuda_hashjoin.cpp
src/backends/cuda/kernels/: groupby_kernel.cu  hashjoin_kernel.cu  sum_kernel.cu
src/backends/metal/: metal_aggregator.mm  metal_groupby.mm  metal_hashjoin.mm  metal_radix_sort.hpp  metal_radix_sort.mm  metal_window.mm
src/backends/metal/kernels/: groupby.metal  sum.metal
src/extension/: CMakeLists.txt  duckdb_loadable.cpp  gpu_join_extension.cpp  gpu_join_extension.hpp  gpu_sum_extension.cpp  gpu_sum_extension.hpp
src/include/: data_format.hpp  gpu_backend.hpp
test/: CMakeLists.txt
test/cpp/: test_aggregator.cpp  test_hashjoin.cpp
test/sql/: gpu_force_backend.test  gpu_groupby.test  gpu_join.test  gpu_min_max.test  gpu_sum.test  gpu_window.test
test/sqllogic/: gpudb.test
